[gd_scene load_steps=21 format=3 uid="uid://d00lvfevw7vd4"]

[ext_resource type="Script" path="res://Scripts/Checkpoint.gd" id="1_20gso"]
[ext_resource type="Texture2D" uid="uid://cead8bnubco24" path="res://Sprites/hs_endpoint.png" id="2_s6v5r"]
[ext_resource type="Texture2D" uid="uid://bl323qioedlnd" path="res://Sprites/ParticleSprites/GoldenBubble_glow_20x20.png" id="4_h3ltv"]
[ext_resource type="PackedScene" uid="uid://bwxh2kw7162nj" path="res://Assets/Particles/P_StarParticles.tscn" id="4_nlqvf"]
[ext_resource type="Material" uid="uid://2qwxxamenw2j" path="res://Assets/Particles/PM_StarParticles.tres" id="5_dnegi"]
[ext_resource type="Texture2D" uid="uid://m2qptxa7ovfr" path="res://Sprites/LightCookies/LightCookie_Circle.png" id="6_j4urq"]
[ext_resource type="Texture2D" uid="uid://x4pfd17t2r0j" path="res://Sprites/lightsources/circle02.png" id="7_7q4os"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wjeu4"]
size = Vector2(138, 193)

[sub_resource type="Curve" id="Curve_evqy8"]
_data = [Vector2(0.253333, 0.10989), 0.0, 0.0, 0, 0, Vector2(0.486667, 0.769231), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_4gv7n"]
curve = SubResource("Curve_evqy8")

[sub_resource type="Gradient" id="Gradient_myjad"]
offsets = PackedFloat32Array(0, 0.327869, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.573244, 0.155845, 0.167698, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_k776n"]
gradient = SubResource("Gradient_myjad")

[sub_resource type="Curve" id="Curve_r5f45"]
_data = [Vector2(0.0506329, 0.072161), 0.0, 0.111168, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_1m80w"]
curve = SubResource("Curve_r5f45")

[sub_resource type="Curve" id="Curve_n872n"]
max_value = 3.0
_data = [Vector2(0.0866667, 0.395605), 0.0, 0.0, 0, 0, Vector2(0.386667, 2.01099), 0.0, 0.0, 0, 0, Vector2(0.68, 2.7033), 0.0, 0.0, 0, 0, Vector2(1, 1.94506), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_tcaoi"]
curve = SubResource("Curve_n872n")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_72mdk"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(1, 1, 0)
emission_shape = 3
emission_box_extents = Vector3(50.955, 49.085, -2.08)
direction = Vector3(0, 0, 0)
spread = 9.388
flatness = 1.0
initial_velocity_max = 104.8
gravity = Vector3(0, -3.325, 0)
scale_min = 0.0
scale_max = 0.3
scale_curve = SubResource("CurveTexture_1m80w")
scale_over_velocity_max = 0.55
scale_over_velocity_curve = SubResource("CurveTexture_tcaoi")
color_ramp = SubResource("GradientTexture1D_k776n")
alpha_curve = SubResource("CurveTexture_4gv7n")

[sub_resource type="Curve" id="Curve_v7m1q"]
max_value = 3.0
_data = [Vector2(0.021097, 0.0626972), 0.0, 0.0, 0, 0, Vector2(0.639241, 2.90773), 0.0, 0.0, 0, 0, Vector2(0.738397, 0.98541), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_pid6b"]
curve = SubResource("Curve_v7m1q")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_562ah"]
lifetime_randomness = 0.5
particle_flag_disable_z = true
emission_shape_scale = Vector3(33, 33, 0)
emission_shape = 1
emission_sphere_radius = 1.0
inherit_velocity_ratio = 0.595
velocity_pivot = Vector3(100, 100, 0)
direction = Vector3(100, 100, 0)
spread = 0.0
radial_velocity_min = -1000.0
radial_velocity_max = 1000.0
gravity = Vector3(0, -100, 0)
linear_accel_min = -16.75
linear_accel_max = 4.55
attractor_interaction_enabled = false
scale_min = 0.0
scale_max = 0.5
scale_over_velocity_max = 3.0
scale_over_velocity_curve = SubResource("CurveTexture_pid6b")
anim_speed_max = 20.15
turbulence_noise_strength = 16.34
sub_emitter_mode = 2
sub_emitter_amount_at_end = 1

[node name="Checkpoint" type="Area2D"]
collision_layer = 0
collision_mask = 2
monitorable = false
script = ExtResource("1_20gso")

[node name="HsEndpoint" type="Sprite2D" parent="."]
light_mask = 33
texture = ExtResource("2_s6v5r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 10.5)
shape = SubResource("RectangleShape2D_wjeu4")

[node name="P_CheckPoint" type="Node2D" parent="."]
light_mask = 33

[node name="GPUParticles2D" type="GPUParticles2D" parent="P_CheckPoint"]
z_index = 6
amount = 72
process_material = SubResource("ParticleProcessMaterial_72mdk")
texture = ExtResource("4_h3ltv")
lifetime = 2.31
preprocess = 34.29
speed_scale = 1.45
explosiveness = 0.64
randomness = 0.55

[node name="GPUParticles2D3" type="GPUParticles2D" parent="P_CheckPoint"]
z_index = 6
position = Vector2(0, -49)
amount = 337
amount_ratio = 0.6112
process_material = SubResource("ParticleProcessMaterial_562ah")
texture = ExtResource("4_h3ltv")
lifetime = 0.01
speed_scale = 0.02
randomness = 1.0
fixed_fps = 0
collision_base_size = 0.0

[node name="ActivationParticles" parent="P_CheckPoint" instance=ExtResource("4_nlqvf")]
process_material = ExtResource("5_dnegi")

[node name="PointLight2D_Activation" type="PointLight2D" parent="."]
visible = false
position = Vector2(1, -50)
scale = Vector2(0.426, 0.426)
color = Color(0.92549, 0.705882, 0.313726, 1)
energy = 1.26
texture = ExtResource("6_j4urq")

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(0.890196, 0.760784, 0.670588, 1)
energy = 0.5
texture = ExtResource("7_7q4os")

[node name="Circle02" type="Sprite2D" parent="."]
modulate = Color(0.835294, 0.639216, 0.490196, 0.752941)
z_index = -1
position = Vector2(2, -77)
scale = Vector2(1.12, 1.12)
texture = ExtResource("7_7q4os")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
